# melody-generator

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-app.yml
docs/source/: audio.rst  conf.py  index.rst  rule.rst  system.rst
melody_generator/: __main__.py  audio.py  rule.py  system.py
melody_generator/static/: style.css
melody_generator/templates/: index.html
resources/: aeolian.conf
tests/: test_system.py
