[tool.poetry]
name = "melody-generator"
version = "0.1.0"
description = "Веб-приложение для генерации мелодий"
authors = ["Sergey Kirichenko <whole-white-whale@yandex.ru>"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scipy = "^1.12.0"

[tool.poetry.group.type.dependencies]
pyright = "^1.1.356"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
